--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "aechezu2",
-  "version": "0.1.0",
+  "version": "0.2.0-SNAPSHOT",
   "dependencies": {
     "angular": "1.2.16",
     "json3": "~3.3.1",
