--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aechezu2",
-  "version": "0.1.0",
+  "version": "0.2.0-SNAPSHOT",
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.1",
